partman (21) UNRELEASED; urgency=low

  * Anton Zinoviev
    - definitions.sh: new functions enable_swap and disable_swap.
  
 -- Anton Zinoviev <zinoviev@debian.org>  Tue,  9 Mar 2004 20:33:10 +0200

partman (20) unstable; urgency=low

  * Anton Zinoviev
    - parted_server.c: return the corect path to the "partition" in a device
      with partition table "loop".  Otherwise it is not possible to create
      filesystems in logical volumes of LVM and it is not possible to
      mount them.

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 12:17:06 -0500

partman (19) unstable; urgency=low

  * Joey Hess
    - Remove map_devfs, use mapdevfs from di-utils-mapdevfs instead.

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Mar 2004 19:29:12 -0500

partman (18) unstable; urgency=low

  * Joey Hess
    - Remove autogenerated postrm.
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by Christian Perrier
    - Hungarian (hu.po) by VERÓK István
    - Italian (it.po) by Stefano Canepa
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Bokmal, Norwegian (nb.po) by Axel Bojer, Knut Yrvin
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrisor
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Albanian (sq.po) by Elian Myftiu
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Mar 2004 19:25:02 -0500

partman (17) unstable; urgency=low

  * Sven Luther
    - added file system type for chrp, chrp_rs6k and chrp_pegasos.

  * Updated translations: 